--- a/App/src/main/res/values/strings.xml
+++ b/App/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
-    <string name="app_name">cocktailApp</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_name"><CocktailApp></CocktailApp></string>
+    <string name="search_title">Search</string>
+    <string name="home_title">Home</string>
+    <string name="ingredients_title">Ingredients</string>
+    <string name="categories_title">Categories</string>
+    <string name="favorites_title">Favorites</string>
 </resources>
