--- a/App/src/main/res/values/strings.xml
+++ b/App/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="ingredients_title">Ingredients</string>
     <string name="categories_title">Categories</string>
     <string name="favorites_title">Favorites</string>
+    <string name="instructions">Instructions:</string>
 </resources>
